# sht3x

./: README.md  __init__.py  example.py  pyproject.toml  sht31.py  sht35.py  sht3x.py
sht3x/: __init__.py  models.py  sht31.py  sht35.py  sht3x.py
